force-app/main/default/objects/TML_Answer_Sequence_Item__c/fields/Is_Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>Is_Correct_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Correct Answer</label>
    <type>Checkbox</type>
</CustomField>