force-app/main/default/objects/TML_Answer_Sequence_Item__c/fields/TML_Answer_Sequence__c.field-meta.xml
<CustomField>
    <fullName>TML_Answer_Sequence__c</fullName>
    <label>TML Answer Sequence</label>
    <referenceTo>TML_Answer_Sequence__c</referenceTo>
    <relationshipLabel>TML Answer Sequence Items</relationshipLabel>
    <relationshipName>TML_Answer_Sequence_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>